overlay/management/gateway-api/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-allow-routes
  namespace: gateway
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: argocd
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: argo
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: dex
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
