overlay/management/gateway-api/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: gateway
  hostnames:
    - alertmanager.homelab.ntbc.io
  rules:
    - backendRefs:
        - name: homelab-alertmanager
          port: 4180
