overlay/management/gateway-api/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: gateway
  hostnames:
    - grafana.homelab.ntbc.io
  rules:
    - backendRefs:
        - name: homelab-grafana
          port: 80
