overlay/management/gateway-api/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: gateway
  hostnames:
    - prometheus.homelab.ntbc.io
  rules:
    - backendRefs:
        - name: homelab-prometheus
          port: 4180
